--- a/src/stylesheets/styles.sass
+++ b/src/stylesheets/styles.sass
@@ -47,6 +47,7 @@ body
   text-transform: uppercase
   text-align: center
   color: $blueDark
+  padding: 2em 0
   @include screen(small)
     padding: 4em 0
 
