font awesome & screenshot

--- a/src/stylesheets/styles.sass
+++ b/src/stylesheets/styles.sass
@@ -1,7 +1,7 @@
 // imports
 @import "~normalize.css"
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700')
-@import "icomoon.css"
+@import '~@fortawesome/fontawesome-free/css/all.css'
 
 // vars
 $blueDark: #343C44
@@ -38,6 +38,7 @@ $breakpoint-large: 1690px
 
 // styling
 body
+  box-sizing: border-box
   display: flex
   align-items: center
   justify-content: center
@@ -71,7 +72,7 @@ body
         color: $red
         text-decoration: underline
 
-    .icon-heart
+    .fa-heart
       color: $red
 
 
